# emotion-concepts

./: METHODOLOGY.md  README.md  analyze_vectors.py  extract_vectors.py  generate_stories.py  plan.md  pyproject.toml  steering.py  trajectory.py
data/stories/: afraid.json  angry.json  anxious.json  calm.json  confident.json  desperate.json  frustrated.json  gloomy.json  grateful.json  guilty.json  hopeful.json  loving.json  metadata.json  obstinate.json  playful.json  proud.json  reflective.json  satisfied.json  surprised.json
data/trajectory/: sample.md
data/vectors/: emotion_activations.npz  emotion_vectors_cleaned.npz  emotion_vectors_raw.npz  metadata.json  neutral_activations.npz
