[project]
name = "emoj-poc"
version = "0.1.0"
description = "Emotion trajectory visualizer - replication of Anthropic's emotion vector methodology"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.0.0+cu124",
]
